# robots-sim

./: .gitignore  NOTICE  README.md  mkdocs.yml  pyproject.toml
.github/: actionlint.yaml
.github/workflows/: docs.yml  nightly-gpu.yml  pypi-publish-on-release.yml  test-lint.yml
docs/: api-reference.md  architecture.md  contributing.md  index.md  requirements.txt  security.md  troubleshooting.md
docs/assets/: mermaid-init.js
docs/backends/: isaac.md
docs/examples/: overview.md
docs/getting-started/: installation.md  quickstart.md
docs/simulation/: domain-randomization.md  overview.md  world-building.md
docs/stylesheets/: extra.css
examples/: MIGRATION.md  README.md  gr00t_server_deterministic_wrapper.py  libero_mujoco.py  libero_mujoco_agent.py  libero_mujoco_stepped.py
examples/isaac/: isaac_replicator_synthdata.py
examples/isaac_gs/: README.md  __init__.py  agent.py  app.py  background.py  camera_utils.py  compositor.py  render_demo.py  requirements.txt  scene.py
examples/libero/: gr00t_server_deterministic_wrapper.py  libero_backend_matrix.py  run_isaac.py  run_isaac_agent.py  run_mujoco.py  run_mujoco_agent.py
examples/mujoco_gs/: README.md  __init__.py  agent.py  app.py  app_groot_libero.py  backgrounds.py  camera_utils.py  compositor.py  groot_libero.py  libero_groot.py  pyproject.toml  requirements.txt  scene.py
examples/so101_curobo/: README.md  __init__.py  agent.py  app.py  collector.py  controller.py  plan_curobo_offline.py  planner.py  requirements.txt  scene.py  smoke_test.py
examples/so101_curobo/isaac/: __init__.py  simulation.py
strands_robots_sim/: __init__.py  sim_env.py
strands_robots_sim/envs/: env_libero.py
strands_robots_sim/isaac/: __init__.py  _install.py  config.py  loaders.py  procedural.py  procedural_usd.py  simulation.py
strands_robots_sim/isaac/tests/: README.md  __init__.py  test_create_simulation_isaac.py  test_entrypoint.py  test_get_observation_diagnostic_logs.py  test_gpu_integ.py  test_isaac_gs_render_demo_video.py  test_loaders.py  test_phase1_doc_banner.py  test_procedural_g1_dof.py  test_procedural_kinematic_guard.py  test_unit.py
strands_robots_sim/newton/: __init__.py  simulation.py
strands_robots_sim/newton/tests/: __init__.py  test_stub.py
strands_robots_sim/policies/groot/: __init__.py  client.py  data_config.py
tests/: README.md  test_groot_n1d6.py
