[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "strands-robots-sim"
# Version is git-tag-driven via hatch-vcs (see [tool.hatch.version] below).
# Stage 3 of the umbrella plan (#8) lands as v0.3.0 — that tag is cut
# *after* this PR + R7 + the upstream U2 entry-point walker have all
# merged; the working tree between tags reports 0.x.y.devN+g<sha>.
dynamic = ["version"]
description = "GPU-accelerated NVIDIA simulation backend (Isaac Sim) for strands-robots — registered as entry-point plugins."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "AWS", email = "opensource@amazon.com"},
]
keywords = ["robots", "agents", "isaac-sim", "libero", "strands", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# strands-robots-sim is a *plugin* of strands-robots: the SimEngine ABC,
# factory, model registry, LIBERO/MuJoCo backend, GR00T policy client, and
# LeRobot recording adapter all live upstream. The only runtime dep this
# package ships with is strands-robots itself (>=0.4.0 — the version that
# walks `[project.entry-points."strands_robots.backends"]` to discover
# pluggable backends like the Isaac one registered below).
#
# GPU-only backend dependencies (Isaac Sim) live behind the `[isaac]`
# extra; pip-install with no extras keeps the runtime tiny and lets
# users layer the GPU bits on per-host.
dependencies = [
    "strands-robots>=0.4.0",
]

[project.optional-dependencies]
# Isaac Sim itself is NOT installed by this extra. It is an Omniverse Kit
# application that must be provisioned out-of-band — via the NVIDIA
# Omniverse Launcher, Isaac Lab (`./isaaclab.sh -i`), or the NGC docker
# image (`nvcr.io/nvidia/isaac-sim:6.0`). Those images/launchers ship a
# complete, bootable Kit (Python 3.12 interpreter + the full
# `isaacsim-*` / `isaacsim-extscache-*` extension set that `SimulationApp`
# needs to resolve its dependency graph and boot).
#
# This was a deliberate decision documented in the README, docs/, and
# strands_robots_sim/isaac/_install.py: the supported install path is
# "Isaac Sim out-of-band, helpers via pip" (Option A in #108). We do NOT
# pin `isaacsim` here, for two reasons:
#
#   1. Internal consistency. Every other surface says Isaac Sim is "not
#      on PyPI / installed separately"; pinning the `isaacsim` PyPI
#      metapackage here contradicted that and sent users down a path the
#      prose says isn't supported (#108).
#   2. The PyPI `isaacsim[all]` metapackage is *incomplete* on its own:
#      it pulls the `isaacsim-*` packages but NOT the
#      `isaacsim-extscache-*` packages, so `SimulationApp` aborts with an
#      `omni.ext` "Failed to resolve extension dependencies" error and
#      `create_world()` never boots (#108). The Launcher/Docker/Isaac Lab
#      images already bundle a complete, bootable Kit, so the extra only
#      needs to carry the genuinely pip-installable helper(s).
#
# `isaaclab` is likewise NOT pinned here. Besides being provided by the
# out-of-band Isaac Lab / Isaac Sim install (the fleet-RL path is a
# source install: `git clone IsaacLab && ./isaaclab.sh -i`, documented in
# docs/getting-started/installation.md), the only `isaaclab` distribution
# on the index is the pre-release `3.0.0b2`. Per PEP 440, a `>=3.0,<4.0`
# pin excludes pre-releases by default, so the old pin made the *entire*
# `[isaac]` extra unsatisfiable — `pip install 'strands-robots-sim[isaac]'`
# failed with "Could not find a version that satisfies the requirement
# isaaclab<4.0,>=3.0". The core quickstart (create_world → add_robot →
# add_object → add_camera → step → render → destroy) needs only Isaac Sim;
# Isaac Lab is required only for the fleet-RL path, which installs from
# source. See #107.
#
# Why Isaac Sim **6.0** specifically (not 5.0/5.1)? `strands-robots>=0.4.0`
# requires Python >=3.12, and Isaac Sim 6.0 is the only release whose
# embedded interpreter targets 3.12 (the 5.x line is 3.11) (#98). Keep
# that major.minor in lockstep with ISAAC_SIM_DOCKER_IMAGE in
# strands_robots_sim/isaac/_install.py and the docs (#90 / #98).
#
#   * `usd-core` — pure-Python USD runtime; used by the procedural scene
#     builders / loaders even when Kit isn't booted. This is the one
#     genuinely pip-installable companion dep, so it's the only pin here.
isaac = [
    "usd-core",
]
# GPU boxes only — the heavy backend in one shot.
all = [
    "strands-robots-sim[isaac]",
]
# Dev extras. ruff + mypy + pytest-cov are the issue's target tooling;
# black / isort / flake8 are kept transitionally so `hatch run lint`
# (which still drives them) keeps passing — the formatter migration is a
# follow-up to keep this PR focused on the entry-point plumbing.
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "black",
    "isort",
    "flake8",
]

# Backend entry points -- the heart of this PR.
#
# strands-robots>=0.4.0 walks `entry_points(group="strands_robots.backends")`
# from its factory and registers every (name -> "module:Class") pair it
# finds. The three entries below mean:
#
#   create_simulation("isaac")  -> IsaacSimulation (R7 implementation)
#
# No monkey-patching of the upstream `_BUILTIN_BACKENDS` dict; no import
# side effects in `strands_robots_sim/__init__.py`. Discovery is purely
# packaging metadata, which means `pip install strands-robots-sim` is the
# *only* step needed for `create_simulation("isaac")` to start resolving
# to our class — same UX as any setuptools-style plugin.
[project.entry-points."strands_robots.backends"]
isaac = "strands_robots_sim.isaac.simulation:IsaacSimulation"

[project.urls]
Homepage = "https://github.com/strands-labs/robots-sim"
Repository = "https://github.com/strands-labs/robots-sim.git"
Issues = "https://github.com/strands-labs/robots-sim/issues"

[tool.hatch.metadata]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["strands_robots_sim"]

[tool.hatch.envs.default]
# `skip-install = true` keeps hatch from re-installing the project (and
# its `strands-robots>=0.4.0` dep) into a fresh venv on every `hatch run`
# invocation -- the >=0.4.0 pin can't resolve from PyPI until upstream U2
# (entry-point walker) ships and the strands-labs/robots repo cuts a
# matching release. Until then, contributors should `pip install -e .`
# from a system Python that already has `strands-robots` installed from
# a local checkout. The deps below are purely the lint + test toolchain
# we want hatch to manage in its venv.
skip-install = true
dependencies = [
    "black",
    "isort",
    "flake8",
    "pytest>=7.0",
    "numpy>=1.21.0",
]

[tool.hatch.envs.default.scripts]
# `hatch run test` runs the Isaac entry-point + lazy-import test slice
# and the simulation-module tests under the same directory.
test = "pytest strands_robots_sim/isaac/tests/ -v"
# Lint extends to `examples/` so the runnable example files (which copy-
# paste into PR docstrings + the README matrix) catch the same drift the
# package source does. Keeps each new R8/R12/R23 backend example honest.
lint = [
    "black --check strands_robots_sim examples",
    "isort --check-only strands_robots_sim examples",
    "flake8 strands_robots_sim examples",
]
format = [
    "black strands_robots_sim examples",
    "isort strands_robots_sim examples",
]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

[tool.pytest.ini_options]
markers = [
    "gpu: tests requiring NVIDIA GPU + Isaac Sim (gated on STRANDS_GPU_TEST=1)",
]
